--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,4 @@
-#loading {width: 100%;height: 100%;top: 0px;left: 0px;position: fixed;display: block; z-index: 99; background-color: white; display: flex; flex-flow: column; align-items: center; justify-content: center;}
+#loading {width: 100%;height: 100%;top: 0px;left: 0px;position: fixed;display: block; z-index: 99; background-color: rgb(31, 34, 55); display: flex; flex-flow: column; align-items: center; justify-content: center;}
 .boxes {
     --size: 32px;
     --duration: 800ms;
