--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -213,7 +213,7 @@ h1 {
 		width: 20px;
 		height: 2px;
 		border-radius: 2px;
-		background:  #00AEE9 !important;
+		background:  #4c68ef !important;
 	}
 
 	.menu-btn .menu:nth-child(2) {
