--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -1,6 +1,9 @@
+
+
 .center {
 	text-align: center;
 }
+
 
 
 h1 {
@@ -265,4 +268,10 @@ h1 {
 	background: transparent !important;
 	border: none !important;
 	box-shadow: none !important;
+}
+
+@media screen and (max-width: 1024px) {
+	#root .nav-wrapper{height: 50px;}
+	#root .nav-wrapper button.menu-btn{background-color:transparent;}
+	#root .nav-wrapper{padding: 0;}
 }
