--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -93,9 +93,10 @@ h1 {
 }
 
 .dropdown-items li{
-	padding: 18px 16px;
-	width: 142px;
+	padding: 15px 16px;
+	width: 160px;
 	text-decoration: none;
+	border-radius: 30px;
 	display: flex;
   }
 
@@ -128,8 +129,8 @@ h1 {
 .dropdown-content {
 	display: none;
 	position: absolute;
-	background-color: white;
-	width: 100%;
+	background-color: rgb(26, 26, 26);
+	width: 130%;
 	z-index: 1;
 }
 
@@ -149,7 +150,7 @@ h1 {
   }
 
 /* Change color of dropdown links on hover */
-.dropdown-content li:hover {background-color: #e0e0e0}
+.dropdown-content li:hover {background-color: #181818}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -214,9 +215,9 @@ h1 {
 	.menu-btn .menu {
 		display: block;
 		width: 20px;
-		height: 2px;
+		height: 3px;
 		border-radius: 2px;
-		background:  #4c68ef !important;
+		background:  #ffffff !important;
 	}
 
 	.menu-btn .menu:nth-child(2) {
@@ -271,7 +272,20 @@ h1 {
 }
 
 @media screen and (max-width: 1024px) {
-	#root .nav-wrapper{height: 50px;}
-	#root .nav-wrapper button.menu-btn{background-color:transparent;}
-	#root .nav-wrapper{padding: 0;}
+    #root .nav-wrapper{
+        height: 50px;
+        width: 100%;
+        padding: 0 25px;
+    }
+
+    #root .nav-wrapper button.menu-btn{
+        background-color:transparent;
+        padding: 0;
+        height: 20px;
+        width: 20px;
+        margin-top: 15px;
+    }
+    #root .nav-wrapper button.menu-btn:hover{
+        background-color:transparent;
+    }
 }
