--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -19,7 +19,7 @@ h1 {
 	align-items: center;
 	justify-content: space-between;
 	margin: auto;
-	width: 86%;
+	width: 80%;
 	height: 120px;
 	border-radius: 0 0 15px 15px;
 	padding: 0 25px;
@@ -58,8 +58,10 @@ h1 {
 
 .nav-tab {
 	padding: 10px 22px;
-	margin: 0;
+	margin: 10;
 	border-right: 0px solid #eee;
+	
+	
 }
 
 
@@ -77,11 +79,13 @@ h1 {
 .dropdown-content {
 	display: none;
 	position: absolute;
+	border-radius: 20px;
 	background-color: #161616;
-	min-width: 160px;
+	min-width: 150px;
 	z-index: 1;
-	padding: 15px 24px 15px 12px;
+	padding: 30px 1px 15px 10px;
 	margin-left: -33px;
+	
 }
 
 /* Change color of dropdown links on hover */
@@ -90,18 +94,18 @@ h1 {
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
+  
 }
 
 .dropdown-items li{
 	padding: 15px 16px;
 	width: 160px;
-	text-decoration: none;
 	border-radius: 30px;
 	display: flex;
   }
 
   .dditem{
-	  margin-left: 7px;
+	  margin-left: 5px;
   }
 
   #infoToggleDesktop{
@@ -139,14 +143,17 @@ h1 {
 	width: 142px;
 	text-decoration: none;
 	display: flex;
+	
   }
 
   .dropdown-items li span{
 	  margin-left: 7px;
+	  
   }
 
   .card-body{
 	  padding: 0 0 15px 0 !important;
+
   }
 
 /* Change color of dropdown links on hover */
@@ -162,6 +169,7 @@ h1 {
 	padding: 18px 16px;
 	text-decoration: none;
 	display: block;
+	
   }
 
 	.nav-container {
@@ -175,6 +183,7 @@ h1 {
 		height: 100%;
         background-color: #161616;
 		flex-flow: column;
+		
 	}
 
 	.nav-tabs {
@@ -189,6 +198,7 @@ h1 {
 		margin: 0;
 		border-right: unset;
 		border-bottom: 0px solid #f5f5f5;
+		
 	}
 
 	.nav-tab:last-child {
@@ -208,6 +218,7 @@ h1 {
 		background-color: transparent !important;
 		border: 0 !important;
 		box-shadow: 0 !important;
+		
 	}
 
    
