--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -17,12 +17,12 @@ h1 {
 	flex-direction: row;
 	flex-wrap: nowrap;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
 	margin: auto;
-	width: 100%;
+	width: 55%;
 	height: 100px;
 	z-index: 81;
-	border-bottom: 0px solid rgb(255, 255, 255);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.288);
 	margin-bottom: 20px;
 }
 
