--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -76,12 +76,15 @@ h1 {
 .dropdown-content {
 	display: none;
 	position: absolute;
-	border-radius: 20px;
-	background-color: #0a0a0a;
-	min-width: 150px;
+	border-radius: 16px;
+	background-color: #282B43;
 	z-index: 1;
-	padding: 30px 1px 15px 10px;
-	margin-left: -33px;
+
+	font-size: 14px;
+	margin-top: 5px;
+	padding: 20px 5px;
+	margin-left: 0px;
+	box-shadow: 0px 0px 4px #ffff;
 	
 }
 
