--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -1,10 +1,6 @@
-
-
 .center {
 	text-align: center;
 }
-
-
 
 h1 {
 	margin: 20px 0;
@@ -20,7 +16,7 @@ h1 {
 	justify-content: space-between;
 	margin: auto;
 	width: 55%;
-	height: 100px;
+	height: 110px;
 	z-index: 81;
 	border-bottom: 0px solid rgba(255, 255, 255, 0.664);
 	margin-bottom: 20px;
@@ -62,7 +58,6 @@ h1 {
 	border-right: 0px solid rgb(121, 121, 121);
 }
 
-
 .nav-tab,
 .menu-btn {
 	cursor: pointer;
@@ -71,6 +66,7 @@ h1 {
 .hidden {
 	display: none;
 }
+
 @media screen and (min-width: 1350px) {
 
 .dropdown-content {
@@ -79,13 +75,11 @@ h1 {
 	border-radius: 16px;
 	background-color: #282B43;
 	z-index: 1;
-
 	font-size: 14px;
 	margin-top: 5px;
 	padding: 20px 5px;
 	margin-left: 0px;
-	box-shadow: 0px 0px 4px #ffff;
-	
+	box-shadow: 0px 0px 3px #ffff;
 }
 
 /* Change color of dropdown links on hover */
@@ -102,33 +96,30 @@ h1 {
 	width: 160px;
 	border-radius: 30px;
 	display: flex;
-  }
+}
 
-  .dditem{
-	  margin-left: 5px;
-  }
+.dditem{
+	margin-left: 5px;
+}
 
-  #infoToggleDesktop{
-	  display: block;
-  }
+#infoToggleDesktop{
+	display: block;
+}
 
-  #infoToggleMobile{
-	  display: none;
-  }
+#infoToggleMobile{
+	display: none;
+}
 
 }
 
 @media screen and (max-width: 1350px) {
-
 	#infoToggleDesktop{
 		display: none;
 	}
-  
+
 	#infoToggleMobile{
 		display: block;
 	}
-  
-
 	
 .dropdown-content {
 	display: none;
@@ -143,18 +134,16 @@ h1 {
 	width: 140px;
 	text-decoration: none;
 	display: flex;
-	
-  }
+}
 
-  .dropdown-items li span{
-	  margin-left: 7px;
-	  
-  }
+.dropdown-items li span{
+	margin-left: 7px;
+}
 
-  .card-body{
-	  padding: 0 0 15px 0 !important;
+.card-body{
+	padding: 0 0 15px 0 !important;
 
-  }
+}
 
 /* Change color of dropdown links on hover */
 .dropdown-content li:hover {background-color: #181818}
@@ -169,104 +158,101 @@ h1 {
 	padding: 18px 16px;
 	text-decoration: none;
 	display: block;
-	
-  }
+}
 
-	.nav-container {
-		position: fixed;
-		display: none;
-		overflow-y: auto;
-		z-index: -1;
-		top: 0;
-		right: 0;
-		width: 222px;
-		height: 100%;
-        background-color: #161616;
-		flex-flow: column;
-		
-	}
+.nav-container {
+	position: fixed;
+	display: none;
+	overflow-y: auto;
+	z-index: -1;
+	top: 0;
+	right: 0;
+	width: 222px;
+	height: 100%;
+	background-color: #2F324A;
+	flex-flow: column;
+}
 
-	.nav-tabs {
-		flex-direction: column;
-		align-items: center;
-		margin-top: 120px;
-		width: 100%;
-	}
+.nav-tabs {
+	flex-direction: column;
+	align-items: center;
+	margin-top: 120px;
+	width: 100%;
+}
 
-	.nav-tab:not(:last-child) {
-		padding: 20px 25px;
-		margin: 0;
-		border-right: unset;
-		border-bottom: 0px solid #f5f5f5;
-		
-	}
+.nav-tab:not(:last-child) {
+	padding: 20px 25px;
+	margin: 0;
+	border-right: unset;
+	border-bottom: 0px solid #f5f5f5;
+}
 
-	.nav-tab:last-child {
-		padding: 15px 25px;
-	}
+.nav-tab:last-child {
+	padding: 15px 25px;
+}
 
-	.menu-btn {
-		position: relative;
-		display: block;
-		margin: 0;
-		width: 20px;
-		height: 15px;
-		cursor: pointer;
-		z-index: 90;
-		padding: 10px;
-		border-radius: 10px;
-		background-color: transparent !important;
-		border: 0 !important;
-		box-shadow: 0 !important;
-	}
+.menu-btn {
+	position: relative;
+	display: block;
+	margin: 0;
+	width: 20px;
+	height: 15px;
+	cursor: pointer;
+	z-index: 90;
+	padding: 10px;
+	border-radius: 10px;
+	background-color: transparent !important;
+	border: 0 !important;
+	box-shadow: 0 !important;
+}
 
-	.menu-btn .menu {
-		display: block;
-		width: 20px;
-		height: 3px;
-		border-radius: 2px;
-		background:  #ffffff !important;
-	}
+.menu-btn .menu {
+	display: block;
+	width: 20px;
+	height: 3px;
+	border-radius: 2px;
+	background:  #ffffff !important;
+}
 
-	.menu-btn .menu:nth-child(2) {
-		margin-top: 4px;
-		opacity: 1;
-	}
+.menu-btn .menu:nth-child(2) {
+	margin-top: 4px;
+	opacity: 1;
+}
 
-	.menu-btn .menu:nth-child(3) {
-		margin-top: 4px;
-	}
+.menu-btn .menu:nth-child(3) {
+	margin-top: 4px;
+}
 
-	#menuToggle:checked + .menu-btn .menu {
-		transition: transform 0.2s ease;
-	}
+#menuToggle:checked + .menu-btn .menu {
+	transition: transform 0.2s ease;
+}
 
-	#menuToggle:checked + .menu-btn .menu:nth-child(1) {
-		transform: translate3d(0, 6px, 0) rotate(45deg);
-	}
+#menuToggle:checked + .menu-btn .menu:nth-child(1) {
+	transform: translate3d(0, 6px, 0) rotate(45deg);
+}
 
-	#menuToggle:checked + .menu-btn .menu:nth-child(2) {
-		transform: rotate(-45deg) translate3d(-5.71429px, -6px, 0);
-		opacity: 0;
-	}
+#menuToggle:checked + .menu-btn .menu:nth-child(2) {
+	transform: rotate(-45deg) translate3d(-5.71429px, -6px, 0);
+	opacity: 0;
+}
 
-	#menuToggle:checked + .menu-btn .menu:nth-child(3) {
-		transform: translate3d(0, -6px, 0) rotate(-45deg);
-	}
+#menuToggle:checked + .menu-btn .menu:nth-child(3) {
+	transform: translate3d(0, -6px, 0) rotate(-45deg);
+}
 
-	#menuToggle:checked ~ .nav-container {
-		z-index: 72;
-		display: flex;
-		animation: menu-slide-left 0.3s ease;
+#menuToggle:checked ~ .nav-container {
+	z-index: 72;
+	display: flex;
+	animation: menu-slide-left 0.3s ease;
+}
+@keyframes menu-slide-left {
+	0% {
+		transform: translateX(200px);
 	}
-	@keyframes menu-slide-left {
-		0% {
-			transform: translateX(200px);
-		}
-		to {
-			transform: translateX(0);
-		}
+	to {
+		transform: translateX(0);
 	}
+}
 }
 
 .web3li{
