--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -169,7 +169,7 @@ h1 {
 	right: 0;
 	width: 222px;
 	height: 100%;
-	background-color: #2F324A;
+	background-color: transparent;
 	flex-flow: column;
 }
 
